-removed licence