@@ -22,4 +22,17 @@ typedef struct {
     void* custom_pointer_for_end_function;
 } pa_callback_data;
 
+typedef struct {
+    float left_tone;
+    float right_tone;
+    float left_amplitude;
+    float right_amplitude;
+    float (*tone_generator)(float, float);
+    uint32_t current_sample;
+    uint32_t sample_count;
+    uint32_t sample_rate;
+    float duration;
+    float value; // a value that is passed into the tone generator. could be HZ for example
+} pa_tone_callback_data;
+
 #endif
