@@ -1,27 +1,39 @@
 #include "../headers/yuzuparse.h"
 
-void end_func(void* custom_pointer){
-    printf((char*)custom_pointer);
+float saw_wave_generator(float time, float value){
+    // play a VALUE hz note
+    
+    return fmodf(time * value * 2 + 1.0, 2.0) - 1.0;
+}
 
-    return;
+float sine_wave_generator(float time, float value){
+    // play a VALUE hz note
+    
+    return sin(time * value * 3.14159264 * 2);
+}
+
+float square_wave_generator(float time, float value){
+    // play a VALUE hz note
+    
+    return fmodf(time * value, 1) - fmodf(time * value + 0.5, 1);
+}
+
+float triangle_wave_generator(float time, float value){
+    // play a VALUE hz note
+    
+    return sin(time * value * 3.14159264 * 2);
 }
 
 int main(){
-    YZ_audio_stream* audio_stream = YZ_load_audio_file("audio/voice.wav", 0);
+    pa_tone_callback_data* data;
 
-    pa_callback_data* callback_data;
+    data = YZ_play_tone(sine_wave_generator, 44100, 100, 220);
+    data = YZ_play_tone(sine_wave_generator, 44100, 100, 440);
+    data = YZ_play_tone(sine_wave_generator, 44100, 100, 880);
+    data = YZ_play_tone(sine_wave_generator, 44100, 100, 110);
 
-    double speed = 1;
-    unsigned char should_loop_audio = 0;
-    double starting_second = 14;
-
-    char end_string[] = "sound has ended!\n";
-
-    if (audio_stream)
-        callback_data = YZ_play_stream_dynamic(audio_stream, &speed, &should_loop_audio, starting_second, end_func, end_string);
-    
-    // wait until audio is finished playing until exiting
-    while (callback_data->current_sample < callback_data->sample_count){}
+    while (data->current_sample < data->sample_count){
+    }
 
     YZ_kill_player();
 
